components/kubearchive/policies/.chainsaw-test/resources/actual-namespace-konflux-toolchain.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: (join('-', [$namespace, $suffix]))
  labels:
    konflux.ci/type: user
    toolchain.dev.openshift.com/type: tenant
