components/kubearchive/policies/.chainsaw-test/resources/kubearchive-crd.yaml
# Source: kubearchive-helm/crds/kubearchive.kubearchive.org_kubearchiveconfigs.yaml
---
apiVersion: apiextensions.k8s.io/v1
kind: CustomResourceDefinition
metadata:
  annotations:
    controller-gen.kubebuilder.io/version: v0.14.0
    cert-manager.io/inject-ca-from: kubearchive/kubearchive-operator-certificate
  name: kubearchiveconfigs.kubearchive.kubearchive.org
spec:
  group: kubearchive.kubearchive.org
  names:
    kind: KubeArchiveConfig
    listKind: KubeArchiveConfigList
    plural: kubearchiveconfigs
    shortNames:
      - kac
      - kacs
    singular: kubearchiveconfig
  scope: Namespaced
  versions:
    - name: v1alpha1
      schema:
        openAPIV3Schema:
          description: KubeArchiveConfig is the Schema for the kubearchiveconfigs API
          properties:
            apiVersion:
              description: |-
                APIVersion defines the versioned schema of this representation of an object.
                Servers should convert recognized schemas to the latest internal value, and
                may reject unrecognized values.
                More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources
              type: string
            kind:
              description: |-
                Kind is a string value representing the REST resource this object represents.
                Servers may infer this from the endpoint the client submits requests to.
                Cannot be updated.
                In CamelCase.
                More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds
              type: string
            metadata:
              type: object
            spec:
              description: KubeArchiveConfigSpec defines the desired state of KubeArchiveConfig
              properties:
                resources:
                  items:
                    properties:
                      archiveOnDelete:
                        type: string
                      archiveWhen:
                        type: string
                      deleteWhen:
                        type: string
                      selector:
                        description: APIVersionKindSelector is an APIVersion Kind tuple with a LabelSelector.
                        properties:
                          apiVersion:
                            description: APIVersion - the API version of the resource to watch.
                            type: string
                          kind:
                            description: |-
                              Kind of the resource to watch.
                              More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds
                            type: string
                          selector:
                            description: |-
                              LabelSelector filters this source to objects to those resources pass the
                              label selector.
                              More info: http://kubernetes.io/docs/concepts/overview/working-with-objects/labels/#label-selectors
                            properties:
                              matchExpressions:
                                description: matchExpressions is a list of label selector requirements. The requirements are ANDed.
                                items:
                                  description: |-
                                    A label selector requirement is a selector that contains values, a key, and an operator that
                                    relates the key and values.
                                  properties:
                                    key:
                                      description: key is the label key that the selector applies to.
                                      type: string
                                    operator:
                                      description: |-
                                        operator represents a key's relationship to a set of values.
                                        Valid operators are In, NotIn, Exists and DoesNotExist.
                                      type: string
                                    values:
                                      description: |-
                                        values is an array of string values. If the operator is In or NotIn,
                                        the values array must be non-empty. If the operator is Exists or DoesNotExist,
                                        the values array must be empty. This array is replaced during a strategic
                                        merge patch.
                                      items:
                                        type: string
                                      type: array
                                      x-kubernetes-list-type: atomic
                                  required:
                                    - key
                                    - operator
                                  type: object
                                type: array
                                x-kubernetes-list-type: atomic
                              matchLabels:
                                additionalProperties:
                                  type: string
                                description: |-
                                  matchLabels is a map of {key,value} pairs. A single {key,value} in the matchLabels
                                  map is equivalent to an element of matchExpressions, whose key field is "key", the
                                  operator is "In", and the values array contains only "value". The requirements are ANDed.
                                type: object
                            type: object
                            x-kubernetes-map-type: atomic
                        required:
                          - apiVersion
                          - kind
                        type: object
                    type: object
                  type: array
              type: object
            status:
              description: KubeArchiveConfigStatus defines the observed state of KubeArchiveConfig
              type: object
          type: object
      served: true
      storage: true
      subresources:
        status: {}
  conversion:
    strategy: Webhook
    webhook:
      clientConfig:
        service:
          namespace: kubearchive
          name: webhook-service
          path: /convert
      conversionReviewVersions:
        - v1
