components/kubearchive/policies/kyverno_rbac.yaml
---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: kyverno-read-kubearchiveconfig
  labels:
    rbac.kyverno.io/aggregate-to-admission-controller: "true"
rules:
- apiGroups:
  - kubearchive.kubearchive.org
  resources:
  - kubearchiveconfigs
  verbs:
  - list
  - get
---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: kyverno-manage-kubearchiveconfig
  labels:
    rbac.kyverno.io/aggregate-to-background-controller: "true"
rules:
- apiGroups:
  - kubearchive.kubearchive.org
  resources:
  - kubearchiveconfigs
  verbs:
  - create
  - get
  - list
  - delete
  - update
