components/kubearchive/policies/.chainsaw-test/resources/expected-kubearchiveconfig.yaml
apiVersion: kubearchive.kubearchive.org/v1alpha1
kind: KubeArchiveConfig
metadata:
  name: kubearchive
  namespace: (join('-', [$namespace, $suffix]))
spec:
  resources: []
